# DeSem-Net

./: .gitignore  README.md  no_ref_test.py  pyproject.toml  test.py  train.py
clipuie/: __init__.py  config.py
clipuie/data/: __init__.py  factory.py
clipuie/data/datasets/: paired_image_dataset.py
clipuie/data/prompts/: __init__.py  underwater_prompt.py
clipuie/engine/: __init__.py  checkpoint.py  evaluator.py  trainer.py
clipuie/losses/: __init__.py  composite.py  perceptual.py  pixel.py
clipuie/models/: builder.py
clipuie/models/architectures/: __init__.py  clipuie_net.py
clipuie/models/multimodal/: __init__.py  condition.py
clipuie/models/ops/: __init__.py  attention.py  common_blocks.py
clipuie/utils/: __init__.py  metrics.py  runtime.py
configs/: ch60.yaml  clipuie_uieb_baseline.yaml  euvp.yaml  euvp_dark.yaml  euvp_scene.yaml  lsui.yaml  u45.yaml  uieb.yaml  val.yaml
configs/ablations/: README.md  uieb_01_baseline.yaml  uieb_02_tpg.yaml  uieb_03_tpg_rae.yaml  uieb_04_tpg_rae_mcr.yaml  uieb_05_full_rd.yaml
docs/: architecture.md  improvement_roadmap.md  sam_advantage.md
sam_integration/: README.md  generate_gradient_map.py  generate_sam_masks.py  trans_npy_to_colornpg.py
sam_integration/configs/: clipuie_euvp_scene_sam_clip_llm.yaml  clipuie_lsui_sam_clip_llm.yaml  clipuie_ufo120_sam_clip_llm.yaml  clipuie_uieb_sam.yaml  clipuie_uieb_sam_clip_llm.yaml
sam_integration/uranker/: uranker_utils.py
